name:                needle
version:             0.1.0.0
synopsis:            ASCII-fied arrow notation
description:         Needle is a domain specific language for ASCII-fied arrow notation. See "Control.Arrow.Needle" for more information and an example.
license:             MIT
license-file:        LICENSE
author:              Josh Kirklin
maintainer:          Josh Kirklin <jjvk2@cam.ac.uk>
copyright:           (c) 2014 Josh Kirklin
category:            Control
build-type:          Simple
stability:           experimental
bug-reports:         https://github.com/ScrambledEggsOnToast/needle/issues
cabal-version:       >=1.10

library
  exposed-modules:     Control.Arrow.Needle
                       Control.Arrow.Needle.Parse
                       Control.Arrow.Needle.TH
  other-modules:       Control.Arrow.Needle.Internal.UnevenGrid
  build-depends:       base >=4.7 && <4.8
                     , text >=1.2 && <1.3
                     , parsec >= 3.1 && <3.2
                     , parsec-extra >=0.1 && <0.2
                     , containers >=0.5 && <0.6
                     , mtl >=2.2 && <2.3
                     , template-haskell
                     , haskell-src-meta >=0.6 && <0.7
                     , vector >= 0.10 && <0.11
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/ScrambledEggsOnToast/needle.git
